/*
 * Copyright 2012 Database Lab., Korea Univ.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "tajo.rpc";
option java_outer_classname = "ProtoParamRpcProtos";

message Invocation {
    required int32 id = 1;
    required string method_name = 2;
    repeated bytes param = 3;
}

message Response {
    required int32 id = 1;
    required bool has_return = 2;
    optional bytes return_value = 3;
    optional string exception_message = 4;
}
